fix font on mobile

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,6 +1,6 @@
 /* ---------- GLOBAL ---------- */
 body {
-    font-family: "Lucida Sans Unicode",cursive;
+    font-family: "Lucida Sans Unicode", sans-serif;
     font-weight: bolder;
     margin: 0;
     min-height: 10rem;
